@@ -2976,7 +2976,7 @@
           | Out$(412 x !x y !y)
           )
           (   get$("S=@\"\\\"",MEM)
-            & @(lst$(S,MEM,LIN):"S=\"\\\\\";\n")
+            & @(lst$(S,MEM,LIN):"S=@\"\\\\\";\n")
           | Out$413
           )
           (   tyr:?a:?b:?c:?d
@@ -5345,6 +5345,27 @@
           )
           ( glf$(=!.a.):(=?h)
           | Out$855
+          )
+          (@(548:@548 @)&Out$856|)
+          (@(548:@ @)&Out$857|)
+          ( @(548:@(548:548) @)&Out$858
+          | 
+          )
+          ( @(548:@(548:?) @)&Out$859
+          | 
+          )
+          ( @(548:@(548 ?) @)&Out$860
+          | 
+          )
+          (   @(548:@(548&?) @)
+            & Out$861
+          | 
+          )
+          ( @(548:@(?:548) @)&Out$862
+          | 
+          )
+          ( @(548:@(?:?) @)&Out$863
+          | 
           )
       &   out
         $ ( str
